fixed sign in on mobile

--- a/css/signup.css
+++ b/css/signup.css
@@ -89,7 +89,7 @@
 
 .sign-up-container form {
 	padding-top: 10%;
-	height: 70%;
+	margin-top: 10vh ;
 }
 
 .sign-in-container {
@@ -97,14 +97,18 @@
 	width: 100%;
 	z-index: 2;
 }
+.sign-in-container h1{
+	margin: 30px 0 0 ;
+	padding: 0;
+}
 
 .sign-in-container form {
 	height: 30%;
+	margin-top: 10vh ;
 }
 
 
 .form-container {
-	margin-top: 0;
 	height: 100%;
 }
 .form-container #login{
@@ -176,6 +180,9 @@
 	transform: translateX(0);
 	transition: transform 0.6s ease-in-out;
 }
+h1.registertitle {
+	color: white !important;
+}
 
 .overlay-left {
 	transform: translateX(-20%);
@@ -240,8 +247,19 @@
 		width: 50%;
 		opacity: 0;
 	}
+	.sign-up-container form {
+		height: 70%;
+		margin-top: 0;
+	}
 	.sign-in-container {
 		width: 50%;
+	}
+	.sign-in-container form{
+		margin-top: 0;
+	}
+	.sign-in-container h1{
+		margin: 0 ;
+		padding: 0;
 	}
 	.sign-up-container form, .sign-in-container form {
 		padding-top: 0;
@@ -251,9 +269,12 @@
 		position: absolute;
 		top: 0;	
 		transition: all 0.6s ease-in-out;
+		margin-top: 0;
+
 	}
 	.form-container #login{
 		padding-top: 0px !important;
 	}
+	
 }	
 
